--- a/brown.html
+++ b/brown.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brown</title>
     <style>
+      p{
+        font-size: 1.2em;
+      }
+    
         body{
             background-color: black;
             background-image: url(Brown.jpg);
