--- a/ornn.html
+++ b/ornn.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ornn</title>
     <style>
+        p{
+            font-size: 1.2em;
+        }
         body{
             background-color: black;
             background-image: url(Ornn.jpg);
