--- a/brown.html
+++ b/brown.html
@@ -8,6 +8,7 @@
     <style>
       p{
         font-size: 1.2em;
+        
       }
     
         body{
@@ -50,7 +51,8 @@
         max-width: 43px;
         margin-top: 10px;
     }
-    nav > a {text-decoration: none;}
+    nav > a {text-decoration: none;
+    ;}
     nav:hover{
         background-color:darkred ;
         }
