--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <h1>
     apenas os personagens brabos
 </h1>
-<p>clicke em um para ver sobre eles</p>
+<h2>clicke em um para ver sobre eles</h2>
 
     </header>
     <nav>
